Wed Jul 31 14:38:52 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: [DOC] Fix example result.  Hash is now ordered.

Wed Jul 31 14:38:10 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: [DOC] Use the term "sorted" instead "ordered" when
	  mentioning SortSet.

Wed Jul 31 12:18:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_struct): New structure.
	  (big2str_orig): Use big2str_struct.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Ditto.

Wed Jul 31 12:02:16 2013  Zachary Scott  <e@zzak.io>

	* lib/rubygems.rb: [DOC] typo in url patch by @Red54 [Fixes #369]
	  https://github.com/ruby/ruby/pull/369

Wed Jul 31 07:09:07 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems from master as of commit 523551c
	* test/rubygems:  ditto.

Tue Jul 30 22:21:54 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* test/ruby/test_hash.rb: add a test for enumeration order of Hash.

Tue Jul 30 18:52:27 2013  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#intersect?, Set#disjoint?): Add new methods for
	  testing if two sets have any element in common.
	  [ruby-core:45641] [Feature #6588] Based on the code by marcandre.

Tue Jul 30 17:16:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (ruby__sfvextra): add QUOTE flag to escape unprintable
	  characters.

Tue Jul 30 11:00:52 2013  Zachary Scott  <e@zzak.io>

	* ext/curses/extconf.rb: [DOC] nodoc to reduce Object pollution

Tue Jul 30 08:19:42 2013  Tanaka Akira  <akr@fsij.org>

	* sizes.c (Init_sizes): Define sizes only if the type actually exists.

Mon Jul 29 22:55:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sizes.c (Init_sizes): define RbConfig::SIZEOF.  [Feature #8568]

Mon Jul 29 22:25:20 2013  Zachary Scott  <e@zzak.io>

	* ext/curses/curses.c: [DOC] Update location of samples
	* samples/curses/*: Move Curses samples and refactor from mixin
	  The samples are included in rdoc for module and use of mixin is
	  confusing
